# chiyakbot_py

./: .gitignore  .python-version  Dockerfile  Procfile  README.md  chatbotmodel.py  checkPickup.py  chiyakbot.py  deploy.sh  escape.py  exchange.py  hitomi.py  kospnamu.py  marketPrice.py  reminder.py  requirements.txt  sauceNAO.py  setup.cfg
lib/: aws.py  chatgpt.py  checkPickup.py  corona.py  doortodoor.py  election.py  escape.py  kospnamu.py  namusearch.py  papago.py  reminder.py  sauceNAO.py
src/chiyakbot/: bot.py  utils.py
src/chiyakbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/chiyakbot/chatbots/: __init__.py  apple_store.py  aws.py  chatgpt.py  chzzk.py  deepl.py  doortodoor.py  escape.py  exchange.py  hitomi.py  inko.py  message_detector.py  namusearch.py  papago.py  regex.py  reminder.py  sauceNAO.py  speller.py
