[metadata]
name = chiyakbot
version = attr: chiyakbot.__version__
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
setup_requires =
    setuptools>=45.2.0
install_requires =
    python-telegram-bot~=20.4
    Pillow~=9.4.0
    httpx~=0.24.1
    attrs~=22.2.0
    aiobotocore~=2.4.2
    python-dotenv~=0.21.1
    openai>=1.9.0
    prettytable~=3.6.0
    inko-py~=1.0.0
    pytz~=2022.7.1
    deepl~=1.15.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.6
    twine>=1.14.0
    Cython>=0.29.24
test =
    pytest>=6.0.1
    pytest-asyncio>=0.14.0
    pytest-cov
    pytest-mock
    flake8>=3.8.3
    mypy>=0.782
    codecov
dev =
    pytest-sugar
    black~=23.1.0
    isort~=5.12.0
ci =

[options.packages.find]
where = src
include = chiyakbot.*

[bdist_wheel]
universal = false

[build_ext]
inplace=1

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,N801,N802,W504
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[mypy]
ignore_missing_imports = true
implicit_optional = true  # FIXME: remove after adding https://github.com/hauntsaninja/no_implicit_optional to fmt
namespace_packages = true
explicit_package_bases = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["chiyakbot"]
skip_glob = [".tmp", ".git", ".vscode"]